[tool.poetry]
name = "speech2textbot"
version = "0.1.0"
description = ""
authors = ["Hiyorimi <playittodeath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telepot = "^12.7"
requests = "^2.24.0"
pydub = "^0.24.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
